- Changed a cite  - Changed unit testing  - Added log file to unit test section

--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -74,6 +74,15 @@
   howpublished = {\url{https://www.moodle.aau.dk/pluginfile.php/837266/mod_resource/content/2/embedded-hardware-and-sensoractuators.pdf}}
 }
 
+@MISC{NXTStatsV2,
+  author = {The LEGO Group},
+  title = {{LEGO\textregistered\ Mindstorms\textregistered\ NXT Hardware Developer Kit}},
+  year = {2006},
+  note = {Seen 09/12/2016},
+  howpublished = {\url{http://www.legolab.daimi.au.dk/DigitalControl.dir/LEGO%20MINDSTORMS%20NXT%20Hardware%20Developer%20Kit/LEGO%20MINDSTORMS%20NXT%20Hardware%20Developer%20Kit.pdf}}
+}
+
+
 @MISC{Hugin,
   author = {},
   title = {{Hugin Expert}},
