--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -42,7 +42,7 @@ perspective and so we will consider them the same in the scope of this project
 \citep{NXTversions}\nl
 
 The LEGO NXT Mindstorms kit consists of the NXT brick and a set of
-compatible sensors and actuators. The NXT brick \citep[P.70]{NXTStats} consists
+compatible sensors and actuators. The NXT brick \citep[P.3]{NXTStatsV2} consists
 of:
 
 \begin{itemize}
