--- a/sections/Design/TnTDesign/TurretDesign.tex
+++ b/sections/Design/TnTDesign/TurretDesign.tex
@@ -42,34 +42,14 @@ so that the turret can fire again in case it misses. It will also allow the pote
 \end{figure}
 
 The ballista, see \autoref{ballista}, was considered as
-depending on how far back the projectile can be pulled, a shot can be fired with a lot of power. The obvious drawbacks
-are that it cannot store more than 1 shot before it needs to be reloaded. This
-gives it a low rate of fire, which means that in case it misses, it will not be
-able to shoot again. This design was dismissed in the conceptual phase because
-of these drawbacks.\nl
+depending on how far back the projectile can be pulled, a shot can be fired with a lot of power. The obvious drawback is that it cannot fire more than 1 shot before it needs to be reloaded. Another drawback is that this design requires a separate mechanism for pulling back the projectile after reloading. This results in a low rate of fire, which means that in case the turret misses, it will not be able to shoot again. This design was dismissed in the conceptual phase because of these drawbacks.\nl
 
-The launcher, see \autoref{tennisball}, was considered since it is able to lauch
-projectiles quickly, and depening on how good the rotating wheels are, with a lot of force. It utilizes
-two wheels placed side by side, spinning in opposite directions, with the
-projectile pushed through. When trying to build this
-design, it was determined that the available motors were not powerful enough to
-deliver the necessary momentum for launching a projectile, not even with a
-gearing. Another problem is that the wheels available was made of soft rubber,
-which absorbs a lot of the force when the projectile is pushed through. For
-this design to work better, the wheels would need to be made of a hard material
-that does not absorb the force and has a lot of friction, which makes it easier
-for the wheels to grip the projectile. This design was dismissed because it was
-not possible to fire with enough force to achieve a desired range.\nl
+The launcher, see \autoref{tennisball}, was considered since it is able to launch
+projectiles rapidly, and depending on the quality of the wheels, with a lot of force. It utilizes two wheels spinning in opposite directions, placed side by side with a small gap in between, for the projectile to be pushed through. When trying to build this design, it was determined that the available motors were not powerful enough to deliver the necessary momentum for launching a projectile, not even with a gearing. Another problem is that the wheels available are made of soft rubber, which absorbs a lot of the force when the projectile is pushed through. For this design to work better, the wheels would need to be made of a hard material that does not absorb the force and has a lot of friction, which makes it easier for the wheels to grip the projectile. This design was dismissed because it was not possible to fire with enough force to achieve the desired range.\nl
 
 The piston design, see \autoref{piston}, uses a piston that pushes the
-projectile through a mouth piece that clamps around it. This means that until enough force has been applied to
-the projectile it is held in the mouth piece. When enough force has been
-applied by the piston, the projectile will be forced out at high speed. This
-design has several advantages, LEGO Technic has a ball launcher which can store
-several small ball projectiles. This allows us to have an easily reloadable and
-fast firing cannon, which can hold up to 6 shots. Based on tests performed in
-\autoref{AppendixDistTest}, it can be seen that the cannon is able to shoot the
-required minimum of 200 cm.
+projectile through a mouth piece that clamps around it. This means that until enough force has been applied to the projectile it is held in the mouth piece. When enough force has been applied by the piston, the projectile will be forced out at high speed. This
+design has several advantages, first and foremost LEGO Technic has a ball shooter available, which can store several small ball projectiles. This allows us to have an easily reloadable and fast firing cannon, which can hold up to 6 shots. Based on tests performed in \autoref{AppendixDistTest}, it can be seen that the cannon is able to shoot the required minimum of 200 cm.
 
 
 The piston was chosen as the final cannon design, as it is able to shoot up to
@@ -224,17 +204,15 @@ the precision of this design is tested, the result can be seen in
 \fix{This shows that The precision of these shoots can be seen in
 This shows that the turret is fairly accurate, since the points on
 the graph somewhat follows .. . The tests conducted in \autoref{SensorTest} also
-shows that the sensors that \name makes use can not sense any longer than the piston design can shoot, which makes the power that
-the two other designs has obslete.\nl}{need an update flour test}
+shows that the sensors that \name makes use can not sense any longer than the piston design can shoot, which makes the power that the two other designs has obslete.\nl}{need an update flour test}
 
-The cannon is mounted on a motor that is used to angle it such that it
-is able to shoot a target at varying distances. This is done by having a
+The cannon is mounted on a motor that is used to control the vertical angle of the cannon, such that it is able to shoot a target at varying distances. This is done by having a
 high gearing on a motor and connecting the platform that the cannon
 is mounted on to the big gear. This makes the platform rise when the motor
 turns.
 
 \subsection{Design of the Frame}
-The Frame of the turret is designed with two requirements in mind: it should
+The frame of the turret is designed with two requirements in mind: it should
 be able to turn freely and it should be as stable as possible. Two designs were
 considered for the frame:
 
@@ -247,10 +225,10 @@ In order to not obstruct turning, the NXT is designed to be a part of the
 frame. This allows the wires to reach the modules, as they are not long
 enough to connect the NXT and modules and not potentially obstruct
 turning.\nl
-
+weight distribution
 In the upright design the screen and the buttons on the front
 are accessible, but all the I/O ports on the end are hard to reach. This
-design was not chosen due to its height and the fact that it is difficult to
+design was not chosen, in part because the weight distribution was unbalanced due to its height and also the fact that it is difficult to
 charge the NXT. The height is a factor since the taller the turret gets the
 more unstable it becomes. This is because the base sits in on top of the
 rotating cog, which is a narrow point, which causes the turret to tilt
@@ -261,13 +239,12 @@ unstable.\nl
 
 In the design where the NXT is lying down, the I/O ports are fully accessible.
 This design also makes the turret a lot shorter, than the upright design, and
-distributes the weight which makes the turret more stable. All of these
-advantages leads us to choosing this design.
+distributes the weight more evenly, which makes the turret more stable. The downside of this design is the access to the LCD screen and buttons is obstructed. As a result the LCD is impossible to read from in praxis, and the buttons are hard to reach, although it is possible. In spite of this, the advantages leads us to choosing this design.
 
 \subsection{Sensor Placement}
 The sensors are a vital part of the turret and need to placed in such a way that
 the results from the sensors are as good as possible. As the tests described in
-\autoref{UltraTestPlacement} states, it is important that the ultrasoic sensors
+\autoref{UltraTestPlacement} states, it is important that the ultrasonic sensors
 are not placed to close to the ground due to the fact that it interferes with
 the soundwaves. This makes the results imprecise and can potentially make the
 turret unable to hit a target.\nl
@@ -298,7 +275,7 @@ target. For this purpose three designs were considered:
 \end{itemize}
 
 In the spiral gear design a motor was placed beside the turret. This motor was
-connected to a stick with a spiral gear that was conected to a cog on the bottom
+connected to a stick with a spiral gear that was connected to a cog on the bottom
 of the base. This design made the turning of the turret precise in the sense
 that the turret was not prone to over turning when stopping. The
 problem with this design is that it limits how much the turret can turn.
