--- a/sections/Conclusion/Discussion.tex
+++ b/sections/Conclusion/Discussion.tex
@@ -1,12 +1,36 @@
-\chapter{Discussion}
+\chapter{Discussion}\label{projDiscus}
+This chapter will be used to examine the project as a whole, and try to identify
+how the project could be improved. This will be done by reflecting upon the
+unsatisfactory parts of the developed product and the project process, and
+suggesting improvements for potential future development.
+
+\section{Sensor Quality}\label{DSQ}
+A major problem was the quality of the sensor input\ldots
+
+\section{Quantity of Data}
+As discussed above in \autoref{DSQ}, the quality of the recieved data was not
+satisfactory\ldots
+
+\section{Implementation of Machine Intelligence}
+Due to problems with the management of the project, the machine intelligence has
+not been implemented.
+
+\section{Communication Using Bluetooth}
+As a part of the machine intelligence, we would have liked to implement
+communication via bluetooth such that calculations could be made on a PC instead
+of the NXT.
+
+\section{Scheduling}
+As we have no control over the scheduling of the different threads on the NXT\ldots
+
+\section{Less Multithreading}
+During evaluation of the 
+
 \begin{itemize}
-  \item Vi har ingen kontrol over skedulering. Andet OS eller Sprog.
   \item Track og GetDataAndCalculate bør ikke køre samtidigt. Den ene starter
   den anden, og holder den kun åben i et tidsinterval.
   \item Rigtigt kamera med vores egen software.
-  \item Sensorer er lort.
   \item Tidsproblemer med at få MI implementeret.
-  \item Meget få målepunkter.
   \item Programmet er ikke designet til at implemetere MI.
   \item Kommunikation mellem computer og NXT.
   \item Resultater fra tests.
