--- a/sections/Conclusion/Conclusion.tex
+++ b/sections/Conclusion/Conclusion.tex
@@ -1,2 +1,11 @@
-\chapter{Conclusion}
-Blah!\ldots \ToDo
+\chapter{Conclusion}\label{FinalConclusion}
+Throughout this project the group has been designing and developing an embedded
+system in the form of an automatic turret, which is capable of hitting a target
+in motion. The physical design of the turret was chosen to be made with LEGO,
+and likewise the hardware and software for the turret has been based on the LEGO
+NXT platform.\nl
+
+Following the discussion of the project process in \autoref{projDiscus}, this
+chapter will be used to conclude on the succes of the project, based on the
+requirements established in \autoref{FeatAndReq}, and the product testing
+presented in \autoref{TurretAcc}. 
