--- a/sections/Testing/HitTest.tex
+++ b/sections/Testing/HitTest.tex
@@ -1,4 +1,4 @@
-\chapter{Turret Accuracy}
+\chapter{Turret Accuracy}\label{TurretAcc}
 In this chapter the turrets abillity to hit the target has been tested.
 
 \section{Test Setup}
