--- a/sections/Design/TnTDesign/TurretDesign.tex
+++ b/sections/Design/TnTDesign/TurretDesign.tex
@@ -239,7 +239,7 @@ unstable.\nl
 
 In the design where the NXT is lying down, the I/O ports are fully accessible.
 This design also makes the turret a lot shorter, than the upright design, and
-distributes the weight more evenly, which makes the turret more stable. The downside of this design is the access to the LCD screen and buttons is obstructed. As a result the LCD is impossible to read from in praxis, and the buttons are hard to reach, although it is possible. In spite of this, the advantages leads us to choosing this design.
+distributes the weight more evenly, which makes the turret more stable. The downside of this design is the access to the LCD screen and buttons is obstructed. As a result the LCD is impossible to read from in practice, and the buttons are hard to reach, although it is possible. In spite of this, the advantages leads us to choosing this design.
 
 \subsection{Sensor Placement}
 The sensors are a vital part of the turret and need to placed in such a way that
@@ -288,7 +288,7 @@ the base of the turret and connected directly to the gear that makes the turret 
 design does not have the problem of the cable limiting how much the turret can
 turn, since the motor is located on the the turret and therefore turns with the
 NXT. This design does have a flaw, that is that it overturns whenever it needs
-to stop. This is beacause the stick that is connected to the turning mechanism
+to stop. This is because the stick that is connected to the turning mechanism
 is made of soft plastic, which makes it twist when the motor applies force to
 it. When the tension in the plastic is great enough the turret begins to turn.
 This means that when the motor stops the plastic will untwist which makes the
