--- a/sections/Design/TnTDesign/TurretDesign.tex
+++ b/sections/Design/TnTDesign/TurretDesign.tex
@@ -302,4 +302,4 @@ the motor and the turning mechanism.\nl
 The gear design is similar to the design with the turret directly connected to
 the gear that turns the turret, the difference being that the motor is placed on
 the outside of the base and the motor is geared which makes it more precise when
-stopping since it does not over turn as much as the design whitout a gear.
+stopping since it does not over turn as much as the design without a gear.
