- CHANGED THE \label to \autoref SO IT WAS FIXED

--- a/sections/Design/TnTDesign/TurretDesign.tex
+++ b/sections/Design/TnTDesign/TurretDesign.tex
@@ -55,7 +55,7 @@ design has several advantages, first and foremost LEGO Technic has a ball shoote
 The piston was chosen as the final cannon design, as it is able to shoot up to
 required range of 200 cm and able to store up to 6 shots. In \autoref{FlourTest}
 the precision of this design is tested, the result can be seen in
-\label{graph:Accuracy}.
+\autoref{graph:Accuracy}.
 
 \begin{graphEnv}
 \begin{graphFloat}
