--- a/sections/Appendix/Physics/FlourTestJones.tex
+++ b/sections/Appendix/Physics/FlourTestJones.tex
@@ -1,26 +1,31 @@
 \chapter{Accuracy Test}\label{AppendixAccTest}
-During development of the turret, a test was made in order to determine the
-accuracy of shots fired by the turret. That is, given a number of shots at the
-same location, what is the chance that the turret hits the specified location.
+After developing the design for the turret, a test was made in order to
+determine how accurate the turret could shoot at a target location. That is,
+given a number of shots at the same location, what is the chance that the turret
+hits the specified location. This test differs from the one in
+\autoref{AppendixDistTest}, as this test focuses on the chance to hit, instead
+of how far the turret can shoot.
 
 \section{Test Setup}
-In this test the turret is placed next to a wall which have been marked with
-distance indicators. In essence this test setup is the same as in
-\autoref{AppendixDistTest}, but the area in which the projectiles land is
-covered in flour. This flour is used to indicate exactly where the projectile
-landed.
+In essence this test setup is the same as in \autoref{AppendixDistTest} where
+the turret fires along a wall, but in this test the area in which the
+projectiles land is covered in flour, which is used to indicate exactly
+where the projectile landed.
 
 \subsection{Test Execution}
 At the beginning of a test, the turret is set to angle itself to the designated
-angle. The turret is manually set to fire a single projectile, and the location
-which the projectile hit is then noted down. This is repeated 5 times for each
-angle, and for 6 different angles. The whole test has been repeated once, such
-that the resulting data is split into two different sets.
+angle. The button is then manually pressed on order to set the turret to fire a
+single projectile. The location, in which the projectile hit, is clearly
+indicated in the flour. This is repeated 5 times for each angle, and for 6
+different angles. The whole test has been done twice, such that the resulting
+data is split into two different sets.
 
 \section{Resulting Data}
 The resulting data consists of a number of tests. Each test results in an angle
 coupled with all the respective distances. Each test is also complemented with
-width between the middle of the turret, and the point the projectile hit.
+width between the middle of the turret, and the point the projectile hit. This
+is done in order to show the difference in width and length between hit
+locations.
 
 \subsection{Set 1}
 The data from the first data set can be seen below in \autoref{table:FTest1}. 
@@ -33,7 +38,7 @@ spread.}{FTest2}
 
 \section{Data Interpretation: Width Spread}
 From the data it can be seen that the distance the projectile has to travel
-decreases the chances of accurately hitting the target.The average spread for
+decreases the chances of accurately hitting the target. The average spread for
 each set is shown below in \autoref{table:AVGSpread}.
 
 \dataTable{AVGSpread}{Average spread recorded in the two data sets.}{AVGSpread}
@@ -44,19 +49,31 @@ considerably more spread that those which were closer.
 \section{Data Interpretation: Length Spread}
 Another problem with the accuracy of the turret lies in the fact that there is a
 variety in the distance the projectile will travel at a given angle. This is shown below in
-\autoref{AngleVsDistSpread}, where the average spread in distance increases the
-farther the projectile should be fired. In addition it has also been noted that
+\autoref{table:AngleVsDistSpread}, where the average spread in distance
+increases the farther the projectile is fired. In addition it has also been noted that
 the turret has a chance to misfire. When this happens, the projectile will not
-follow its usual arch, and will travel a considerately shorter distance.
+follow its usual arch, and will travel a considerately shorter distance. This
+misfire chance was found to be 3.3\% in the first set, and 23.3\% in the second
+set.
 
 \dataTable{AngleVsDistSpread}{Average spread recorded in the two data
 sets.}{AngleVsDistSpread}
 
-The data shown in \autoref{AngleVsDistSpread} was calculated by looking at all
-of the recorded distances.
-As stated, the turret has a chance to misfire. 
-
+The data shown in \autoref{table:AngleVsDistSpread} was calculated by looking at
+all of the recorded distances. 
 
 \section{Conclusion}
-It appears that the theoretical data is off from the test data. We need to
-figure out why!
+By looking at this test we can conclude the following:
+\begin{itemize}
+  \item The turret has an average chance to misfire of 13.3\%.
+  \item In the recorded lengths, the hit location has a spread of between 9cm
+  and 107cm.
+  \item In the recorded widths, the hit location has a spread of between 0.25cm
+  and 8.55cm.
+\end{itemize}
+
+This test has shown a large possible difference between points for the
+same angle. While this does pose a problem for the turret, we have been unable
+to identify which factors causes this behaviour. As there is no clear
+correlation between the angle of fire and the spread, we assume that the problem
+lies with the fireing mechanic itself. 
