--- a/sections/Testing/Speedtest.tex
+++ b/sections/Testing/Speedtest.tex
@@ -1,4 +1,4 @@
-\section{Speedtest}\label{speedotesto}
+\chapter{Target Speed Test}\label{speedotesto}
 In order to test the speed of the target a test was devised.
 hvad er det for en test og vhvad vil vi have ud af det
 \subsection{Test setup}
