--- a/sections/Testing/Testing.tex
+++ b/sections/Testing/Testing.tex
@@ -1,83 +1,10 @@
-\chapter{Testing}
+\chapter{Testing}\label{AppendixTesting}
 During the development of the automated turret, a number of tests have been made
 in order to document that the turrets features functions as intended. This
 chapter will be use to present these tests and their related data, and to
 discuss to which degree these results are acceptable according the the product
 requiremtents.
 
-\section{Angle Test}
-As discussed in \fix{\autoref{}}{Jones} the turret has one main variable it can
-change in order to accurately hit the target, namely the angle of firing. Due to the
-importance of being able to precisely set the angle of firing, tests have been
-made to ensure that the turrets accuracy is within an acceptable margain of
-error.
 
-\subsection{Test Setup}
-The setup for this test was to use a protractor to measure the angle of the
-turret in relation to the horizontal. In order to have a stable and
-consistant position to measure the angle from, a lego structure was added to the
-turrets base. As the turret is shifted in relation to the pivot point, a lego
-brick was added which connects to the pivot point and is parallel to the turret.
-This brick is used to measure the turrets angle. This setup can be seen in
-\autoref{AngleTestSetup}.
-
-\figx[0.13]{AngleTestSetup}{Setup for testing the turrets angle.}
-
-In order to test the turrets ability to set its angle correctly, two different
-tests were used to test the most likely scenarios. The first test has the turret
-retract to its resting position before setting the angle of firing. The second
-test has the turret set the angle of firing without retracting to the resting
-position before the next test. For these tests the resting position is measured
-to be 5 degrees.
-
-\subsection{Results: Test 1}
-This test had the turret retract to its resting position before setting its
-angle of fire. Below will be presented the data from data set 2. The rest
-of the data can be found in \fix{\autoref{}}{JONES}.
-
-\begin{table}[H]
-\centering
-\begin{tabular}{ll}
-Test Num:                     & 2      \\ \hline
-\multicolumn{1}{l|}{Expected} & Actual \\ \hline
-\multicolumn{1}{l|}{7}        & 10     \\
-\multicolumn{1}{l|}{14}       & 17     \\
-\multicolumn{1}{l|}{21}       & 23     \\
-\multicolumn{1}{l|}{28}       & 29     \\
-\multicolumn{1}{l|}{35}       & 45     \\
-\multicolumn{1}{l|}{42}       & 43     \\
-\multicolumn{1}{l|}{49}       & 50     \\
-\multicolumn{1}{l|}{56}       & 57     \\
-\multicolumn{1}{l|}{63}       & 64     \\
-\multicolumn{1}{l|}{70}       & 77
-\end{tabular}
-\caption{Results from data set 2.}
-\label{AngleTest1Result}
-\end{table}
-
-\subsection{Results: Test 2}
-This test had the turret set the angle as an offset based on the previously set
-angle. Below will be presented the data from data set 4.
-The rest of the data can be found in \fix{\autoref{}}{DAMN}.
-
-\begin{table}[H]
-\centering
-\begin{tabular}{ll}
-Test Num:                     & 4      \\ \hline
-\multicolumn{1}{l|}{Expected} & Actual \\ \hline
-\multicolumn{1}{l|}{7}        & 7     \\
-\multicolumn{1}{l|}{14}       & 13     \\
-\multicolumn{1}{l|}{21}       & 20     \\
-\multicolumn{1}{l|}{28}       & 28     \\
-\multicolumn{1}{l|}{35}       & 34     \\
-\multicolumn{1}{l|}{42}       & 40     \\
-\multicolumn{1}{l|}{49}       & 48     \\
-\multicolumn{1}{l|}{56}       & 56     \\
-\multicolumn{1}{l|}{63}       & 64     \\
-\multicolumn{1}{l|}{70}       & 75
-\end{tabular}
-\caption{Results from data set 4.}
-\label{AngleTest1Result}
-\end{table}
-
+\input{sections/Testing/AngleTest.tex}
 \input{sections/Testing/Speedtest.tex}
