--- a/sections/appAname.tex
+++ b/sections/appAname.tex
@@ -1,4 +1,5 @@
 \input{sections/Appendix/Physics/DistanceTest} 
-\input{sections/Appendix/Physics/DistanceData}
 \input{sections/Appendix/Physics/FlourTestJones}
-\input{sections/Testing/Testing.tex}
+\input{sections/Testing/AngleTest.tex}
+\input{sections/Testing/Speedtest.tex}
+% \input{sections/Testing/Testing.tex}
