--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -82,6 +82,14 @@
   howpublished = {\url{http://www.legolab.daimi.au.dk/DigitalControl.dir/LEGO%20MINDSTORMS%20NXT%20Hardware%20Developer%20Kit/LEGO%20MINDSTORMS%20NXT%20Hardware%20Developer%20Kit.pdf}}
 }
 
+@MISC{Tracker,
+  author = {},
+  title = {{Tracker Video Analysis and Modeling Tool}},
+  year = {},
+  note = {Seen 12/12/2016},
+  howpublished = {\url{http://physlets.org/tracker/}}
+}
+
 
 @MISC{Hugin,
   author = {},
