--- a/sections/Appendix/Physics/DistanceTest.tex
+++ b/sections/Appendix/Physics/DistanceTest.tex
@@ -21,7 +21,7 @@ degrees. The turret then angles itself to the given position and fires a single
 projectile. This procedure is video recorded in order to accurate determine
 exactly where the projectile landed. This is done a number of times for each
 given angle. Video analysis is done using the program Tracker, which is
-developed as a part of the Open Source Physics program.
+developed as a part of the Open Source Physics program \cite{Tracker}.
 
 \section{Resulting Data}
 The resulting data from these tests consists of measured angles and their
