--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -1,33 +1,38 @@
 \section{Domains and Probability}
 
-The model is designed to be used to predict \texttt{Vector\_1}, to get an
-accurate read on \texttt{Vector\_1} we need to model how the vectors relate to
-the observations and each other, as well as what their domains are. There are
-however limitations we need to consider. The model is constructed using Hugin
-Lite \citep{Hugin}, this allows the model to be constructed easily but limits
-the total number of nodes to 50 and the number of cases to 500, an example of a
-case is a specific \texttt{S\_0} given a specific \texttt{Vector\_0}. This
-limitation causes problems for how precise the model can be. This can be
-especially problematic when we would like to use a variable to represent the
-distance between the target and turret. To work around these limits we have
-divided the domains into intervals. This means the model loses some precision,
-but it allows us to work around the limit of 500 cases. This means that instead
-of having only a few nodes with a continuous set of values we can consider
-additional variables, which can make up for the loss of accuracy. It also allows
-us group the values that seem unlikely to be used often into big intervals.
+The model is designed to predict \texttt{Vector\_1}, and to do this we need to
+model how the vectors relate to the observations, other vectors and the
+velocity, as well as what their domains are. There are however limitations we
+need to consider. The model is constructed using Hugin Lite \citep{Hugin}, this
+allows the model to be constructed easily but limits the total number of nodes
+to 50 and the number of cases to 500. An example of a case is a specific
+value in \texttt{SD\_0} given a specific value in \texttt{Vector\_0}. This
+limitation decreases how precise the model can be, it can be especially problematic when we want to
+have variables that represent the distance between the target and turret as
+well as the current angle of the turret. To work around these limits we have
+divided the domains into intervals. This means the model lose some precision,
+but it allows us to work around the limit of 500 cases. Instead of having
+only a few nodes with a continuous set of values, we can consider additional
+variables, which can  make up for the loss of accuracy. It also allows us group
+the values that seem unlikely to be used often into big intervals.
 
 \subsection{Constructing the Probability Tables}
 
 Most of the domains are easy to determine, for instance the domains for each of
 the sensors are determined by what they can output. As such the domain for
 distance has values between 0 and 255, as this is what the ultrasound sensor
-can sense. These values can then be divided into 7 intervals, with the first and
-the last intervals being the biggest, while the remaining 5 divide the rest of
-the distance evenly between them, see \autoref{SD_table} \fix{}{insert probs}.
+can sense. It is much harder to determine the domain for the vectors, as such we
+have gathered data about the vectors and sensor observations. This data is not
+only used to determine the domain for the vectors, it is also used to determine
+the probability tables.\nl
+
+The domain for distance is divided into 7 intervals, with the first and the last
+intervals being the biggest, while the remaining 5 divide the rest of the
+distance evenly between them, see \autoref{SDtable}.
 
 \begin{center}
-\begin{table}[]
-\label{SD_table}
+\begin{table}[H]
+\label{SDtable}
 \begin{tabular}{|l|l|l|l|}
 \hline
 \multicolumn{4}{|l|}{P(SD\_0|Vector\_0)} \\ \hline
@@ -51,7 +56,7 @@ program, in practice this means that domain for sensing the angle is from -15 to
 too quickly}. 
 
 \begin{center}
-\begin{table}[]
+\begin{table}[H]
 \label{SA_table}
 \begin{tabular}{|l|l|l|l|}
 \hline
@@ -68,13 +73,13 @@ Vector\_0     & (-0.15,-0.10) & (-0.15,-0.10)    & (-0.15,-0.10)  \\\hline
 \end{table}
 \end{center}
 
-The domain for time is the difference in time between the first observation and
-subsequent observations. By determining the domain this way, we can reduce the
-available domain to a manageable size, as it will at most be time it takes to
-travel from one end of the shooting range to the others.\fix{}{explain the 4.5
-limit to time}
+The domain for time is considered the difference in time between the first
+observation and subsequent observations, see \autoref{ST_table}. This means
+that at most we will need to consider time for it takes for the target to
+travel from one end of the shooting range to other at the slowest speed.
+
 \begin{center}
-\begin{table}[]
+\begin{table}[H]
 \label{ST_table}
 \begin{tabular}{|l|l|l|l|}
 \hline
@@ -88,19 +93,73 @@ Vector\_0     & (-0.15,-0.10) & (-0.15,-0.10)    & (-0.15,-0.10)  \\\hline
 \end{table}
 \end{center}
 
-\fix{The domains for velocity is set to be three seperate speeds, 30cm/s, 36cm/s
-and 42cm/s}{Is velocity used as a node, and are these the correct speeds?}.
+The domains for velocity is set to be three seperate speeds, 30cm/s and 42cm/s,
+which correspond to the target moving at 40\% and 60\% of its maximum speed,
+see \autoref{Velo_table}.
 
-The domain for the vectors is a bit more difficult to determine. \fix{In order
-to determine this domain we have con ducted a tests where the vectors and the
-data used were measured.}{Perform tests to determine vectors and their likely
-hoods as well as all the other chances} By determining the vectors this way,
-along with gathering the other data, get a rough estimate of the domain and
-construct the probability tables for the other nodes.
+\begin{center}
+\begin{table}[H]
+\label{Velo_table}
+\begin{tabular}{|l|l|l|l|}
+\hline
+\multicolumn{4}{|l|}{P(Velocity)} \\ \hline
+30cm/s   & 0.50   \\\hline   
+42cm/s   & 0.50   \\ \hline
+\end{tabular}
+\caption{The probability table for velocity of the target.}
+\end{table}
+\end{center}
+
+The domain for the vectors are determined by 
+\fix{}{determine vectors}
+
+\begin{center}
+\begin{table}[H]
+\label{Vector0_table}
+\begin{tabular}{|l|l|l|l|}
+\hline
+\multicolumn{4}{|l|}{P(Vector\_0|Velocity)} \\ \hline
+Vector\_0     & (-0.15,-0.10) & (-0.15,-0.10)    & (-0.15,-0.10)  \\\hline   
+[0 - 1500]      &     &     &     \\ \hline 
+[1501 - 3000]    &     &     &     \\ \hline
+[3001 - 4500]   &     &     &     \\ \hline
+\end{tabular}
+\caption{The probability table for a vector given the velocity}
+\end{table}
+\end{center}
+
+\begin{center}
+\begin{table}[H]
+\label{Vector1_table}
+\begin{tabular}{|l|l|l|l|}
+\hline
+\multicolumn{4}{|l|}{P(Vector\_1|Vector\_0,Velocity)} \\ \hline
+Vector\_0     & (-0.15,-0.10) & (-0.15,-0.10)    & (-0.15,-0.10)  \\\hline   
+[0 - 1500]      &     &     &     \\ \hline 
+[1501 - 3000]    &     &     &     \\ \hline
+[3001 - 4500]   &     &     &     \\ \hline
+\end{tabular}
+\caption{The probability table for a vector given the velocity and the previous
+vector}
+\end{table}
+\end{center}
+
+
+% Perform tests to determine vectors and their likely
+% hoods as well as all the other chances.
+% 
+% By determining the vectors this way, along with gathering the other data, get a
+% rough estimate of the domain and construct the probability tables for the other
+% nodes.
 
 
 
 \subsection{inference}
+
+
+
+
+
 Since a bayesian network has been constructed we can abuse the property of
 inference to reduce the size of our probability table. Instead of a joint
 probability-table, it is sufficient instead to just look at the tables we are
@@ -110,6 +169,7 @@ provide the conditional probability table P(Vector\_0|S\_0,S\_1). This reduces
 the overall statespace of our model
 
 \subsection{Using the Network}
+
 
 
 
