--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -1,4 +1,4 @@
-\section{Domains and Probability}
+\section{Domains and Probability}\label{MID}
 
 The model is designed to predict \texttt{Vector\_1}, and to do this we need to
 model how the vectors relate to the observations, other vectors and the
