--- a/sections/Testing/HitTest.tex
+++ b/sections/Testing/HitTest.tex
@@ -23,6 +23,6 @@ a distance of 1.5m the ultrasonic sensor would not measuer a distance to the
 target, and therefor no futher test at the range was conduted. But all of the
 3 shots that hit the target was from
 the dataset where the power was 40\% and the distance 0.5m  In conclusion \names
-had an accuracy of 12.5\%.
+accuracy is 12.5\%.
 
 \dataTable{accuracy}{Data from the accuracy test}{accuracy}
