--- a/sections/frontpage.tex
+++ b/sections/frontpage.tex
@@ -24,7 +24,7 @@
     \vspace{0.2cm}
     \begin{center}
     \Huge{\textbf{
-	- ARES -\\ Autonomous Reconnaissance and Extermination System
+	- \name -\\ \fullname
     }}
     \end{center}
     \begin{center}
