--- a/setup/macros.tex
+++ b/setup/macros.tex
@@ -92,18 +92,18 @@
   }
 }
 
-\newcommand{\name}{TS101\ }
+\newcommand{\name}{\namep\ }
 
 \newcommand{\say}[1]{\textit{``#1''}} 
 
 \newcommand{\textc}[1]{\texttt{#1}} 
 
-\newcommand{\names}{TS101s\
+\newcommand{\names}{\namep '\
 }
 
-\newcommand{\fullname}{Turret System 101}
+\newcommand{\fullname}{Autonomous Reconnaissance and Extermination System}
 
-\newcommand{\namep}{TS101}
+\newcommand{\namep}{ARES}
 
 \newif\iffirst
 \firsttrue
