--- a/sections/Appendix/Physics/DistanceTest.tex
+++ b/sections/Appendix/Physics/DistanceTest.tex
@@ -34,16 +34,18 @@ For each measured angle this gives the following average distance:
 realationship}{AngDistRelAVG}
 
 \subsection{Theorem Comparison}
-The data from these tests have been gathered imperically, but in order to
+The data from these tests have been gathered emperically, but in order to
 determine their quality, or to identify any unknown variables, it is necessary
 to compare them to the theoretical results. This can be determined by using
-\autoref{FinEq2} which was described in \autoref{CalcDist}:
-\begin{equation}\label{FinEq2}
+\autoref{FinEq3} which was described in \autoref{CalcDist}:
+
+\begin{equation*}
 x\ =\ \frac{v_0*cos(a)}{g}* \left(
 v_0*sin(a)+\sqrt{v_0^2*sin(a)^2+2*g*(h+r*sin(a))}\right)+r*cos(a)
-\end{equation}
+\tag{\ref*{FinEq3}}
+\end{equation*}
 
-This results in the following data:
+Using the formula results in the following data:
 \dataTable{DistanceTestTheoretical}{Theoretical Angle/Distance
 realationship}{AngDistTheo}
 From this data we can see a large difference between the theoretical distance
