--- a/sections/Implementation/GetDataAndCalculate.tex
+++ b/sections/Implementation/GetDataAndCalculate.tex
@@ -14,16 +14,13 @@ measure the distance to the target, which is done by calling the method
 \begin{minipage}[H]{\linewidth}
 \begin{lstlisting}[caption = General behaviour for GetDataAndCalculate, label = InitGDAC] 
 task GetDataAndCalculate(){
-    string input;
     int length;
     while(collecting){
         if(blobInCam){
             length = GetDistance();
             ...
         }
-    ...
     }
-...
 }
 \end{lstlisting}
 \end{minipage}
@@ -44,13 +41,13 @@ returns an integer containing the distance in centimeters.\nl
 \begin{minipage}[H]{\linewidth}
 \begin{lstlisting}[caption = Method for reading the distance from the ultrasonic distance sensors., label = GetDistanceFunc] 
 int GetDistance(){
-    WriteI2CRegister(SENSOR_RIGHT, I2C_ADDR_DEFAULT, I2C_REG_CMD, US_CMD_CONTINUOUS);
+    WriteI2CRegister(SENSOR_RIGHT, I2C_ADDR_DEFAULT, I2C_REG_CMD, US_CMD_CONTINUOUS);  //Turns on the right ultrasonic sensor
     int right = SensorUS(SENSOR_RIGHT);
-    WriteI2CRegister(SENSOR_RIGHT, I2C_ADDR_DEFAULT, I2C_REG_CMD, US_CMD_OFF);
+    WriteI2CRegister(SENSOR_RIGHT, I2C_ADDR_DEFAULT, I2C_REG_CMD, US_CMD_OFF);         //Turns off the right ultrasonic sensor
 
-    WriteI2CRegister(SENSOR_LEFT, I2C_ADDR_DEFAULT, I2C_REG_CMD, US_CMD_CONTINUOUS);
+    WriteI2CRegister(SENSOR_LEFT, I2C_ADDR_DEFAULT, I2C_REG_CMD, US_CMD_CONTINUOUS);   //Turns on the left ultrasonic sensor
     int left = SensorUS(SENSOR_LEFT);
-    WriteI2CRegister(SENSOR_LEFT, I2C_ADDR_DEFAULT, I2C_REG_CMD, US_CMD_OFF);
+    WriteI2CRegister(SENSOR_LEFT, I2C_ADDR_DEFAULT, I2C_REG_CMD, US_CMD_OFF);          //Turns off the left ultrasonic sensor
     return CheckLength(right,left);
 }
 \end{lstlisting}
@@ -65,21 +62,20 @@ registered, the sensor will return 255, which is the maximum value. As such,
 useless data is not used. If the left sensors reading is accepted, the right
 sensor is ignored. This approach is chosen as both sensors seldom get data at
 the same time, and because the left sensor has been observed to be more
-accurate. If no valid reading is found, the method returns -1, which indicates
-an error.\nl
+accurate. If no valid reading is found, the method returns \textc{NO\_DATA},
+which indicates an error.\nl
 
 \begin{minipage}[H]{\linewidth}
 \begin{lstlisting}[caption = CheckLength method which chooses the best input distance., label = CheckLengthEx] 
-int CheckLength(int right, int left)
-{ 
-if(left < MAX_DISTANCE){
+int CheckLength(int right, int left){
+    if(left < MAX_DISTANCE){
         return left;
     }
     else if(right < MAX_DISTANCE){
         return right;
     }
     else{
-        return -1;
+        return NO_DATA;
     }
 }
 \end{lstlisting}
