--- a/sections/Testing/AngleTest.tex
+++ b/sections/Testing/AngleTest.tex
@@ -24,27 +24,11 @@ to be 5 degrees.
 
 \subsection{Results: Resting Position}
 This test had the turret retract to its resting position before setting the
-specified angle of fire. The data presented below in \autoref{AngleTest1Result}
-is the average of five repetitions.
+specified angle of fire. The data presented below in
+\autoref{table:AngleTest1Result} is the average of five repetitions.
 
-\begin{table}[H]
-\centering
-\begin{tabular}{ll}
-\multicolumn{1}{l|}{Expected} & Actual \\ \hline
-\multicolumn{1}{l|}{7}        & 7     \\
-\multicolumn{1}{l|}{14}       & 13     \\
-\multicolumn{1}{l|}{21}       & 20     \\
-\multicolumn{1}{l|}{28}       & 27     \\
-\multicolumn{1}{l|}{35}       & 34     \\
-\multicolumn{1}{l|}{42}       & 42     \\
-\multicolumn{1}{l|}{49}       & 49     \\
-\multicolumn{1}{l|}{56}       & 55     \\
-\multicolumn{1}{l|}{63}       & 64     \\
-\multicolumn{1}{l|}{70}       & 72
-\end{tabular}
-\caption{Test results from resetting the position between tests.}
-\label{AngleTest1Result}
-\end{table}
+\dataTable{AngleTest1}{Test results from resetting the position between
+tests.}{AngleTest1Result}
 
 From these data we can determine that the maximum difference in angles is 3
 degrees.  
@@ -56,25 +40,7 @@ tests. This is done in order to determine the turrets ability to dynamically and
 accurately set its angle of fire. The data presented below in
 \autoref{AngleTest2Result} is the average from 5 repetitions.
 
-\begin{table}[H]
-\centering
-\begin{tabular}{ll}
-Test Num:                     & 4      \\ \hline
-\multicolumn{1}{l|}{Expected} & Actual \\ \hline
-\multicolumn{1}{l|}{7}        & 9     \\
-\multicolumn{1}{l|}{14}       & 16     \\
-\multicolumn{1}{l|}{21}       & 23     \\
-\multicolumn{1}{l|}{28}       & 29     \\
-\multicolumn{1}{l|}{35}       & 35     \\
-\multicolumn{1}{l|}{42}       & 43     \\
-\multicolumn{1}{l|}{49}       & 49     \\
-\multicolumn{1}{l|}{56}       & 57     \\
-\multicolumn{1}{l|}{63}       & 64     \\
-\multicolumn{1}{l|}{70}       & 71
-\end{tabular}
-\caption{Test results from dynamically setting the angle.}
-\label{AngleTest1Result}
-\end{table}
+\dataTable{AngleTest2}{Test results from dynamically setting the angle.}{AngleTest2Result}
 
 From these data we can determine that the maximum difference in angles is 2
 degrees, which is slightly more accurate than the previous test.
